# CFEAR_Radarodometry

.devcontainer/: Dockerfile  devcontainer.json
src/: transform.py
src/CFEAR_Radarodometry_code_public/: CMakeLists.txt
src/CFEAR_Radarodometry_code_public/include/cfear_radarodometry/: odometrykeyframefuser.h
src/CFEAR_Radarodometry_code_public/launch/: filter.launch  odom.launch  oxford_demo  usv_demo
src/CFEAR_Radarodometry_code_public/rviz/: odom.rviz
src/CFEAR_Radarodometry_code_public/src/: offline_odometry.cpp  ros_bridge.py
src/CFEAR_Radarodometry_code_public/src/cfear_radarodometry/: odometrykeyframefuser.cpp  radar_driver.cpp
src/USV_tf2/: CMakeLists.txt  package.xml
src/USV_tf2/launch/: tf.launch
src/USV_tf2/src/: dynamic_tf_broadcaster.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: robot_localization_example.yaml
src/robot_description/launch/: robot.launch
src/robot_description/rviz/: robot.rviz
src/robot_description/src/: transform.py
src/robot_description/urdf/: robot.urdf.xacro
